# wetty

./: .eslintrc.json  .gitignore  Cargo.toml  package.json  tsconfig.json
.github/workflows/: main.yml
src/: config.rs  main.rs  middlewares.rs
src/client/wetty/term/: confiruragtion.ts
src/routes/: health.rs  html.rs  metrics.rs  mod.rs  socket.rs
