[package]
name = "wetty"
version = "2.1.0"
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2018"
description = "WeTTY = Web + TTY. Terminal access in browser over http/https"
repository = "https://github.com/butlerx/wetty"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "configs/**/*.yaml", "client/**/*"]

[dependencies]
futures = "0.3"
handlebars = "3.5"
lazy_static = "1.4.0"
log = "0.4"
prometheus = { version = "0.11.0", features = ["process"] }
pty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.4.3"
structopt = "0.3.21"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
warp = "0.3"
